Updated Investor MS